Transferred from the Adobe Open Source Subversion Repository
Revision: 14728
Author:   cframpto@adobe.com
Date:     2010-03-12T14:44:40.762849Z

Log Message: 
-----------
Merge 14727 from 4.x  SDK-25829, SDK-25735.  

Add missing selectors for air in MXFTEText.css.  layoutDirection=rtl didn't work in WindowedApplicatin since it was using UIComponent's internal width variable rather than using the setter which applies the mirroring transform.

Modified Paths:
--------------
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/spark/MXFTEText.css</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/airframework/src/mx/core/WindowedApplication.as</path>

git-svn-id: https://svn.apache.org/repos/asf/incubator/flex/trunk/frameworks@1274912 13f79535-47bb-0310-9956-ffa450edef68

--- a/projects/spark/MXFTEText.css
+++ b/projects/spark/MXFTEText.css
@@ -45,6 +45,7 @@
 
 @namespace charts "mx.charts.chartClasses.*";
 @namespace mx "library://ns.adobe.com/flex/mx";
+@namespace mxair "mx.core.windowClasses.*";
 @namespace olap "mx.controls.olapDataGridClasses.*";
 @namespace s "library://ns.adobe.com/flex/spark";
 
@@ -181,6 +182,16 @@ mx|AdvancedDataGridHeaderRenderer
 mx|AdvancedDataGridSortItemRenderer
 {
 	textFieldClass: ClassReference("mx.core.UIFTETextField");
+}
+
+mxair|StatusBar
+{
+    textFieldClass: ClassReference("mx.core.UIFTETextField");
+}
+
+mxair|TitleBar
+{
+    textFieldClass: ClassReference("mx.core.UIFTETextField");
 }
 
 charts|ChartLabel
