Transferred from the Adobe Open Source Subversion Repository
Revision: 20340
Author:   mhorn@adobe.com
Date:     2011-02-16T20:43:31.710054Z

Log Message: 
-----------
Update examples to use Spark DataGrid

Modified Paths:
--------------
<path kind="file" action="M">/private/flex/sdk/branches/hero_private/frameworks/projects/spark/asdoc/en_US/spark/collections/examples/SortExample1.mxml</path>
<path kind="file" action="M">/private/flex/sdk/branches/hero_private/frameworks/projects/spark/asdoc/en_US/spark/collections/examples/SortExample2.mxml</path>

git-svn-id: https://svn.apache.org/repos/asf/incubator/flex/trunk/frameworks@1274922 13f79535-47bb-0310-9956-ffa450edef68

--- a/projects/spark/asdoc/en_US/spark/collections/examples/SortExample2.mxml
+++ b/projects/spark/asdoc/en_US/spark/collections/examples/SortExample2.mxml
@@ -27,20 +27,25 @@
                 collection.addItem({first:"Steve", last:"Maccormick"});
                 collection.addItem({first:"Aiden", last:"MacCormick"});
                 collection.addItem({first:"Eileen", last:"MacGregor"});
+                
                 // Create the Sort instance.
                 var sort:Sort = new Sort();
+                
                 // Set the sort field; sort on the last name first, first name 
                 // second.
                 var sortfieldLastName:SortField = new SortField("last",true);
                 var sortfieldFirstName:SortField = new SortField("first",true);
                 sort.fields = [sortfieldLastName, sortfieldFirstName];
+                
                 // Add the sort field objects to this application's list of
                 // style clients.  This will cause the sort field objects to 
                 // inherit the locale style from this Application. 
                 addStyleClient(sortfieldLastName);
                 addStyleClient(sortfieldFirstName);
+                
                 // Assign the Sort object to the view.
                 collection.sort = sort;
+                
                 // Apply the sort to the collection.
                 collection.refresh();
             }
@@ -57,12 +62,14 @@
             <s:Label text="Example: 'en-US', 'fr-FR', 'zh-CN', 'ar-SA'"/>
         </s:VGroup>
         
-        <mx:DataGrid dataProvider="{collection}" 
+        <s:DataGrid dataProvider="{collection}" width="100%"
                      creationComplete="{collection.refresh()}">
-            <mx:columns>
-                <mx:DataGridColumn dataField="last" />
-                <mx:DataGridColumn dataField="first"/>
-            </mx:columns>
-        </mx:DataGrid>
+            <s:columns>
+                <s:ArrayList>
+                    <s:GridColumn dataField="last"/>
+                    <s:GridColumn dataField="first"/>
+                </s:ArrayList>
+            </s:columns>
+        </s:DataGrid>
     </s:VGroup>
 </s:Application>
