--- a/projects/spark/asdoc/en_US/spark/components/examples/BorderContainerExample.mxml
+++ b/projects/spark/asdoc/en_US/spark/components/examples/BorderContainerExample.mxml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- Simple example to demonstrate Spark Border component -->
+<!-- Simple example to demonstrate Spark BorderContainer component -->
 <s:Application xmlns:fx="http://ns.adobe.com/mxml/2009"
     xmlns:s="library://ns.adobe.com/flex/spark">
         		
     <!-- Define a border component with clipAndEnableScrolling set to true -->
-	<s:Border width="200" height="200" borderWeight="10" borderColor="blue"
+	<s:BorderContainer width="200" height="200" borderWeight="10" borderColor="blue"
 	    backgroundColor="red" backgroundAlpha="0.5">
 	    
 		<s:borderStroke>
@@ -26,9 +26,9 @@
 			</s:RadialGradient>
 		</s:backgroundFill>
 	    
-		<!-- Define and constrain the scroller to match the size of the Border -->
+		<!-- Define and constrain the scroller to match the size of the BorderContainer -->
 		<s:Scroller top="0" left="0" right="0" bottom="0">
-			<!-- Define a group to hold all the Border's content -->
+			<!-- Define a group to hold all the BorderContainer's content -->
 			
 			<s:Group>
 				<!-- Set layout for the content in the Group -->
@@ -38,12 +38,12 @@
 				</s:layout>
 				
 				<!-- Define content -->
-				<s:Label text="Spark Border Component"/>
+				<s:Label text="Spark BorderContainer Component"/>
 				<s:NumericStepper/>
 				<s:Button label="Spark Button" baseColor="yellow"/>
 				<s:TextArea height="250" width="250" text="Large Spark TextArea"/>
 			</s:Group>
 			
 		</s:Scroller>
-	</s:Border>
+	</s:BorderContainer>
 </s:Application>
