Transferred from the Adobe Open Source Subversion Repository
Revision: 7887
Author:   tan@adobe.com
Date:     2009-06-16T18:29:25.839380Z

Log Message: 
-----------
Updating ButtonBar example. The itemClick event is being removed. Instead, we should be using the selectionChanged event from the List classes.

Modified Paths:
--------------
/flex/sdk/trunk/frameworks/projects/flex4/asdoc/en_US/spark/components/examples/ButtonBarExample.mxml

git-svn-id: https://svn.apache.org/repos/asf/incubator/flex/trunk/frameworks@1274938 13f79535-47bb-0310-9956-ffa450edef68

--- a/projects/spark/asdoc/en_US/spark/components/examples/ButtonBarExample.mxml
+++ b/projects/spark/asdoc/en_US/spark/components/examples/ButtonBarExample.mxml
@@ -23,10 +23,10 @@
 
     <fx:Script>
     <![CDATA[
-         import mx.events.ItemClickEvent;
+         import mx.events.IndexChangedEvent;
 
-         private function changeSelection(event:ItemClickEvent): void {
-             selectionText.text = "Selected Item: " + event.label;
+         private function changeSelection(event:IndexChangedEvent): void {
+             selectionText.text = "Selected Item: " + ButtonBar(event.target).selectedItem;
          }
     ]]>
     </fx:Script>
@@ -36,7 +36,7 @@
             horizontalCenter="0" verticalCenter="0">
         <s:SimpleText text="Select an item below:" x="10" y="15" />
         <s:ButtonBar id="viewMenu" requiresSelection="true" x="10" y="40" width="320"
-                itemClick="changeSelection(event)">
+                selectionChanged="changeSelection(event)">
             <s:dataProvider>
                 <s:ArrayCollection source="['Home', 'Rooms', 'Dining']" />
             </s:dataProvider>
