Transferred from the Adobe Open Source Subversion Repository
Revision: 7892
Author:   tan@adobe.com
Date:     2009-06-16T20:50:50.589813Z

Log Message: 
-----------
Updates to samples using ButtonBar after some name changes.

selectionChanged -> change
requiresSelection -> requireSelection

Modified Paths:
--------------
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/flex4/asdoc/en_US/spark/styles/examples/DescendantSelectorExample.mxml</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/flex4/asdoc/en_US/spark/components/examples/ButtonBarExample.mxml</path>

git-svn-id: https://svn.apache.org/repos/asf/incubator/flex/trunk/frameworks@1274939 13f79535-47bb-0310-9956-ffa450edef68

--- a/projects/spark/asdoc/en_US/spark/components/examples/ButtonBarExample.mxml
+++ b/projects/spark/asdoc/en_US/spark/components/examples/ButtonBarExample.mxml
@@ -35,8 +35,8 @@
             width="75%" height="75%"
             horizontalCenter="0" verticalCenter="0">
         <s:SimpleText text="Select an item below:" x="10" y="15" />
-        <s:ButtonBar id="viewMenu" requiresSelection="true" x="10" y="40" width="320"
-                selectionChanged="changeSelection(event)">
+        <s:ButtonBar id="viewMenu" requireSelection="true" x="10" y="40" width="320"
+                change="changeSelection(event)">
             <s:dataProvider>
                 <s:ArrayCollection source="['Home', 'Rooms', 'Dining']" />
             </s:dataProvider>
