Transferred from the Adobe Open Source Subversion Repository
Revision: 6807
Author:   srahim@adobe.com
Date:     2009-05-11T22:23:19.969552Z

Log Message: 
-----------
ASDoc updates

QE Notes: None
Doc Notes: None
Bugs: -
Checkintests: passed

Modified Paths:
--------------
/flex/sdk/trunk/frameworks/projects/flex4/asdoc/en_US/spark/components/examples/CheckBoxExample.mxml

git-svn-id: https://svn.apache.org/repos/asf/incubator/flex/trunk/frameworks@1274951 13f79535-47bb-0310-9956-ffa450edef68

--- a/projects/spark/asdoc/en_US/spark/components/examples/CheckBoxExample.mxml
+++ b/projects/spark/asdoc/en_US/spark/components/examples/CheckBoxExample.mxml
@@ -8,7 +8,7 @@
            [Bindable]
            public var totalCost:Number = 4.50;
 
-           // This event handler adding and removing condiments from the hamburger.
+           // This event handler adds/removes the cost of condiments to/from the total cost.
            private function modifyBurger(evt:MouseEvent):void {
                // Add 0.25 to the total cost for every condiment. Delete 0.25 for
                // every condiment removed.
