--- a/projects/spark/asdoc/en_US/spark/components/examples/DataGridMasterDetailExample.mxml
+++ b/projects/spark/asdoc/en_US/spark/components/examples/DataGridMasterDetailExample.mxml
@@ -5,37 +5,13 @@
                xmlns:mx="library://ns.adobe.com/flex/mx">
     
     <fx:Declarations>
-        <s:XMLListCollection id="employees">
-            <s:source>
-                <fx:XMLList>
-                    <employee>
-                        <name>Christina Coenraets</name>
-                        <phone>555-219-2270</phone>
-                        <email>ccoenraets@fictitious.com</email>
-                        <active>true</active>
-                    </employee>
-                    <employee>
-                        <name>Joanne Wall</name>
-                        <phone>555-219-2012</phone>
-                        <email>jwall@fictitious.com</email>
-                        <active>true</active>
-                    </employee>
-                    <employee>
-                        <name>Maurice Smith</name>
-                        <phone>555-219-2012</phone>
-                        <email>maurice@fictitious.com</email>
-                        <active>false</active>
-                    </employee>
-                    <employee>
-                        <name>Mary Jones</name>
-                        <phone>555-219-2000</phone>
-                        <email>mjones@fictitious.com</email>
-                        <active>true</active>
-                    </employee>
-                </fx:XMLList>
-            </s:source>
-        </s:XMLListCollection>
-    </fx:Declarations>
+        <s:ArrayCollection id="employees">
+            <s:DataItem name="Christina Coenraets" phone="555-219-2270" email="ccoenraets@fictitious.com" active="true"/>
+            <s:DataItem name="Joanne Wall" phone="555-219-2012" email="jwall@fictitious.com" active="true"/>
+            <s:DataItem name="Maurice Smith" phone="555-219-2012" email="maurice@fictitious.com" active="false"/>
+            <s:DataItem name="Mary Jones" phone="555-219-2000" email="mjones@fictitious.com" active="true"/>
+        </s:ArrayCollection>
+     </fx:Declarations>
     
     <s:Panel title="Spark DataGrid Control Example"
              width="75%" height="75%" 
@@ -45,7 +21,7 @@
                      text="Select a row in the DataGrid control."/>			
             <s:DataGrid id="dg"
                         dataProvider="{employees}"
-                        editable="true"					
+                        editable="true"
                         width="100%" height="100%">
                 <s:columns>
                     <s:ArrayCollection>
@@ -69,8 +45,10 @@
                                             ]]>
                                         </fx:Script>									    
                                         <s:RichEditableText id="anchor" editable="false" 
-                                                            left="5" verticalCenter="0" right="5" 
-                                                            lineBreak="explicit" />
+                                                            paddingLeft="5" paddingRight="5"
+                                                            paddingTop="5" paddingBottom="5"
+                                                            verticalCenter="0"
+                                                            heightInLines="1"/>
                                     </s:GridItemRenderer>
                                 </fx:Component>
                             </s:itemRenderer>
